--- a/English_ver/HTML/En_Q9.html
+++ b/English_ver/HTML/En_Q9.html
@@ -31,7 +31,16 @@
     <script type="text/javascript" id="lang-ja.js" data-file-id="1ILtxOTG0MtuWoWuYjUCMh6Wd2CkG_pci" class="user-script" src="Assets/lang-ja.js"></script>
 
 
+<script>
+    var myVars = {
+      question_file: "../FinalBRDs/En_performance_Q9.brd",
+      tutoring_service_communication: "javascript"
+    };
 
+    function ctatOnload() {
+      initTutor(myVars);
+    }
+  </script>
 
 
 
