--- a/English_ver/HTML/En_Q9.ed.html
+++ b/English_ver/HTML/En_Q9.ed.html
@@ -26,8 +26,6 @@
         }
         .background-initial {background-color: rgb(255, 255, 255); top: 5px; left: 154px; width: 786px; height: 775px;
         }
-        .silex-id-1691934076333-4 {top: 530px; left: 360px; height: 30px; width: 80px;
-        }
         .silex-id-1691946487715-49 {top: 264px; left: 100px; height: 0px; width: 0px; display: none;
         }
         .silex-id-1691946568100-50 {top: 284px; left: 120px; height: 0px; width: 0px; display: none;
@@ -35,10 +33,6 @@
         .silex-id-1691946608155-51 {top: 304px; left: 140px; height: 0px; width: 0px; display: none;
         }
         .silex-id-1691946734697-52 {top: 324px; left: 160px; height: 0px; width: 0px; display: none;
-        }
-        .silex-id-1691946312144-47 {top: 530px; left: 360px; height: 30px; width: 80px;
-        }
-        .silex-id-1691946328290-48 {top: 530px; left: 360px; height: 30px; width: 80px;
         }
         .silex-id-1691937160567-33 {top: 530px; left: 520px; height: 30px; width: 130px;
         }
@@ -60,6 +54,12 @@
         }
         .silex-id-1691934946325-8 {top: 263px; left: 270px; height: 1.4em; width: 52px;
         }
+        .silex-id-1691934076333-4 {top: 530px; left: 360px; height: 30px; width: 80px;
+        }
+        .silex-id-1691946328290-48 {top: 530px; left: 360px; height: 30px; width: 80px;
+        }
+        .silex-id-1691946312144-47 {top: 530px; left: 360px; height: 30px; width: 80px;
+        }
     </style>
 
 
@@ -68,8 +68,8 @@
     <script type="text/notjavascript" class="silex-script"></script>
     <meta name="interface-id" content="En_Q9">
 
-    <meta name="asset-map" content="{&quot;blob:https://cdn.ctat.cs.cmu.edu/c5d2747e-c2ed-4524-8565-fa031175f08d&quot;:{&quot;name&quot;:&quot;Q9.png&quot;,&quot;id&quot;:&quot;1SsXEXO4061G5o_taPG4Sl22W_L9lLDYU&quot;,&quot;path&quot;:&quot;English_ver/HTML/Assets/Q9.png&quot;}}">
-    <meta name="parent-data" content="{&quot;id&quot;:&quot;1bBefqvE2RdEsKRKqe9PmPgXQdt4IqXL0&quot;, &quot;path&quot;:&quot;/English_ver/HTML/En_Q9&quot;}">
+    <meta name="asset-map" content="{&quot;blob:https://cdn.ctat.cs.cmu.edu/6766e4b7-93d8-4565-a53d-143004307322&quot;:{&quot;name&quot;:&quot;Q9.png&quot;,&quot;id&quot;:&quot;1SsXEXO4061G5o_taPG4Sl22W_L9lLDYU&quot;,&quot;path&quot;:&quot;English_ver/HTML/Assets/Q9.png&quot;}}">
+    <meta name="parent-data" content="{&quot;id&quot;:&quot;1bBefqvE2RdEsKRKqe9PmPgXQdt4IqXL0&quot;, &quot;path&quot;:&quot;English_ver/HTML/En_Q9.ed.html&quot;}">
     <script type="text/notjavascript" id="lang-ja.js" data-file-id="1ILtxOTG0MtuWoWuYjUCMh6Wd2CkG_pci" class="user-script">var CTATLanguagePack = { "HORIZONTAL" : "LR", // Accepted values are: LR, RL "VERTICAL" : "TB", // Accepted values are TB, BT "LOADING" : "Please wait while the tutor is being loaded", "NEXTPROBLEM" : "Retrieving the Next Problem...", "CONGRATULATIONS_YOU_ARE_DONE":
         "おめでとう！クリアしました。", "SURE_YOU_ARE_DONE": "Are you sure you are done?", "TUTORDISCONNECTED" : "The tutor has disconnected. Please refresh the page.", "OUTOFORDER" : "You need to do other steps first, before doing the step you just worked on. You
         might request a hint for more help.", "DONE" : "おわり", "HINT" : "ヒント", "NEXT" : "次へ", "PREVIOUS" : "前へ", "HIGHLIGHTEDSTEP" : "Instead of the step you are working on, please work on the highlighted step.", "NOTDONE" : "I'm sorry, but you are not
@@ -77,6 +77,10 @@
         : "Connection refused by tutoring service, please check your server or contact an administrator.", "ERROR_CONN_LS" : "Connection refused by the logging server, please check your connection or contact an administrator.", "AWAITING_OTHER_COLLABORATORS":
         "Waiting for other team members..." };
     </script>
+
+
+
+
 
 
 
@@ -105,14 +109,14 @@
 <body data-silex-id="body-initial" class="body-initial prevent-draggable silex-runtime" data-silex-type="container" onload="ctatOnload();" style="">
     <a id="page-page-1" data-silex-type="page" class="page-element">Page 1</a>
     <div data-silex-id="background-initial" class="background background-initial editable-style container-element prevent-draggable" data-silex-type="container">
-        <div data-silex-type="image" class="editable-style silex-id-1692950695692-4 image-element page-page-1 paged-element" data-silex-id="silex-id-1692950695692-4"><img class="silex-element-content" src="blob:https://cdn.ctat.cs.cmu.edu/c5d2747e-c2ed-4524-8565-fa031175f08d"></div>
+        <div data-silex-type="image" class="editable-style silex-id-1692950695692-4 image-element page-page-1 paged-element" data-silex-id="silex-id-1692950695692-4"><img class="silex-element-content" src="blob:https://cdn.ctat.cs.cmu.edu/6766e4b7-93d8-4565-a53d-143004307322"></div>
 
         <div data-silex-type="ctat" id="hint" class="CTATHintButton editable-style silex-id-1691933992980-1 page-page-1 paged-element CTATComponent" data-silex-id="silex-id-1691933992980-1" data-ctat-component="CTATHintButton" data-ctat-enabled="true"></div>
         <div data-silex-type="ctat" id="done" class="CTATDoneButton editable-style silex-id-1691933999357-2 page-page-1 paged-element CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691933999357-2" data-ctat-component="CTATDoneButton" data-ctat-enabled="true"></div>
         <div data-silex-type="ctat" class="CTATHintWindow editable-style silex-id-1691934003408-3 CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691934003408-3" id="ctatdiv7" data-ctat-component="CTATHintWindow" onkeypress="return noenter(event)"
         data-ctat-enabled="true"></div>
         <div data-silex-type="ctat" class="CTATSubmitButton editable-style silex-id-1691934076333-4 page-page-1 paged-element CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691934076333-4" id="submit" data-ctat-component="CTATSubmitButton" data-ctat-enabled="true"
-        data-ctat-label="かくにん" data-ctat-target="combo1;combo2" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
+        data-ctat-label="Submit" data-ctat-target="combo1;combo2" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
         <div data-silex-type="ctat" class="CTATComboBox editable-style silex-id-1691934808162-7 page-page-1 paged-element CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691934808162-7" id="combo1" data-ctat-component="CTATComboBox" data-ctat-enabled="true"
         data-ctat-tutor="false" data-ctat-show-hint-highlight="false" data-ctat-labels="-----,44,437,110,100,120,11"></div>
         <div data-silex-type="ctat" class="CTATComboBox editable-style CTATComponent silex-id-1691934946325-8 page-page-1 paged-element" data-ctat-tabindex="1" data-silex-id="silex-id-1691934946325-8" id="combo2" data-ctat-component="CTATComboBox" data-ctat-enabled="true"
@@ -126,7 +130,7 @@
         <div data-silex-type="ctat" class="CTATComboBox editable-style silex-id-1691937190706-34 page-page-1 paged-element CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691937190706-34" id="combo4" data-ctat-component="CTATComboBox" data-ctat-enabled="true"
         data-ctat-labels="-----,A,B,C" data-ctat-tutor="false" data-ctat-show-hint-highlight="false"></div>
         <div data-silex-type="ctat" class="CTATSubmitButton editable-style CTATComponent silex-id-1691946312144-47 page-page-1 paged-element" data-ctat-tabindex="1" data-silex-id="silex-id-1691946312144-47" id="submit2" data-ctat-component="CTATSubmitButton"
-        data-ctat-enabled="true" data-ctat-label="かくにん" data-ctat-target="combo3" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
+        data-ctat-enabled="true" data-ctat-label="Submit" data-ctat-target="combo3" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
         <div data-silex-type="ctat" class="CTATSubmitButton editable-style CTATComponent silex-id-1691946328290-48 page-page-1 paged-element" data-ctat-tabindex="1" data-silex-id="silex-id-1691946328290-48" id="submit3" data-ctat-component="CTATSubmitButton"
         data-ctat-enabled="true" data-ctat-label="Submit" data-ctat-target="combo4" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
         <div class="CTATGroupingComponent silex-id-1691946487715-49 group-element page-page-1 paged-element CTATComponent" data-ctat-componentlist="done,combo3,combo4,ctatdiv24,submit2,submit3" id="group1" data-silex-id="silex-id-1691946487715-49" data-ctat-component="CTATGroupingComponent"
@@ -164,6 +168,10 @@
 
 
     <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
+
+
+
+
 
 </body>
 
