--- a/English_ver/HTML/En_Q9.html
+++ b/English_ver/HTML/En_Q9.html
@@ -31,16 +31,11 @@
     <script type="text/javascript" id="lang-ja.js" data-file-id="1ILtxOTG0MtuWoWuYjUCMh6Wd2CkG_pci" class="user-script" src="Assets/lang-ja.js"></script>
 
 
-<script>
-    var myVars = {
-      question_file: "../FinalBRDs/En_perfprmance_Q9.brd",
-      tutoring_service_communication: "javascript"
-    };
 
-    function ctatOnload() {
-      initTutor(myVars);
-    }
-  </script>
+
+
+
+
 
 
 
@@ -1967,7 +1962,7 @@ a.wt-link:link{
         <div data-silex-type="ctat" id="hint" class="CTATHintButton editable-style silex-id-1691933992980-1 page-page-1 paged-element CTATComponent" data-silex-id="silex-id-1691933992980-1" data-ctat-component="CTATHintButton" data-ctat-enabled="true"></div>
         <div data-silex-type="ctat" id="done" class="CTATDoneButton editable-style silex-id-1691933999357-2 page-page-1 paged-element CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691933999357-2" data-ctat-component="CTATDoneButton" data-ctat-enabled="true"></div>
         <div data-silex-type="ctat" class="CTATHintWindow editable-style silex-id-1691934003408-3 CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691934003408-3" id="ctatdiv7" data-ctat-component="CTATHintWindow" onkeypress="return noenter(event)" data-ctat-enabled="true"></div>
-        <div data-silex-type="ctat" class="CTATSubmitButton editable-style silex-id-1691934076333-4 page-page-1 paged-element CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691934076333-4" id="submit" data-ctat-component="CTATSubmitButton" data-ctat-enabled="true" data-ctat-label="かくにん" data-ctat-target="combo1;combo2" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
+        <div data-silex-type="ctat" class="CTATSubmitButton editable-style silex-id-1691934076333-4 page-page-1 paged-element CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691934076333-4" id="submit" data-ctat-component="CTATSubmitButton" data-ctat-enabled="true" data-ctat-label="Submit" data-ctat-target="combo1;combo2" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
         <div data-silex-type="ctat" class="CTATComboBox editable-style silex-id-1691934808162-7 page-page-1 paged-element CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691934808162-7" id="combo1" data-ctat-component="CTATComboBox" data-ctat-enabled="true" data-ctat-tutor="false" data-ctat-show-hint-highlight="false" data-ctat-labels="-----,44,437,110,100,120,11"></div>
         <div data-silex-type="ctat" class="CTATComboBox editable-style CTATComponent silex-id-1691934946325-8 page-page-1 paged-element" data-ctat-tabindex="1" data-silex-id="silex-id-1691934946325-8" id="combo2" data-ctat-component="CTATComboBox" data-ctat-enabled="true" data-ctat-tutor="false" data-ctat-show-hint-highlight="false" data-ctat-labels="-----,1,80,100,534,90,535"></div>
         <div data-silex-type="ctat" class="CTATComboBox editable-style CTATComponent silex-id-1691934951526-9 page-page-1 paged-element" data-ctat-tabindex="1" data-silex-id="silex-id-1691934951526-9" id="combo3" data-ctat-component="CTATComboBox" data-ctat-enabled="true" data-ctat-tutor="false" data-ctat-show-hint-highlight="false" data-ctat-labels="-----,299,90,100,298,299,150"></div>
@@ -1975,7 +1970,7 @@ a.wt-link:link{
 
         <div data-silex-type="text" class="CTATTextField editable-style silex-id-1691937160567-33 text-element page-page-1 paged-element CTATComponent" data-silex-id="silex-id-1691937160567-33" id="ctatdiv24" data-ctat-component="CTATTextBasedComponent" data-ctat-enabled="true" contenteditable="false">Answer：Train</div>
         <div data-silex-type="ctat" class="CTATComboBox editable-style silex-id-1691937190706-34 page-page-1 paged-element CTATComponent" data-ctat-tabindex="1" data-silex-id="silex-id-1691937190706-34" id="combo4" data-ctat-component="CTATComboBox" data-ctat-enabled="true" data-ctat-labels="-----,A,B,C" data-ctat-tutor="false" data-ctat-show-hint-highlight="false"></div>
-        <div data-silex-type="ctat" class="CTATSubmitButton editable-style CTATComponent silex-id-1691946312144-47 page-page-1 paged-element" data-ctat-tabindex="1" data-silex-id="silex-id-1691946312144-47" id="submit2" data-ctat-component="CTATSubmitButton" data-ctat-enabled="true" data-ctat-label="かくにん" data-ctat-target="combo3" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
+        <div data-silex-type="ctat" class="CTATSubmitButton editable-style CTATComponent silex-id-1691946312144-47 page-page-1 paged-element" data-ctat-tabindex="1" data-silex-id="silex-id-1691946312144-47" id="submit2" data-ctat-component="CTATSubmitButton" data-ctat-enabled="true" data-ctat-label="Submit" data-ctat-target="combo3" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
         <div data-silex-type="ctat" class="CTATSubmitButton editable-style CTATComponent silex-id-1691946328290-48 page-page-1 paged-element" data-ctat-tabindex="1" data-silex-id="silex-id-1691946328290-48" id="submit3" data-ctat-component="CTATSubmitButton" data-ctat-enabled="true" data-ctat-label="Submit" data-ctat-target="combo4" data-ctat-show-feedback="false" data-ctat-show-hint-highlight="false"></div>
         <div class="CTATGroupingComponent silex-id-1691946487715-49 group-element page-page-1 paged-element CTATComponent" data-ctat-componentlist="done,combo3,combo4,ctatdiv24,submit2,submit3" id="group1" data-silex-id="silex-id-1691946487715-49" data-ctat-component="CTATGroupingComponent" data-ctat-enabled="true"></div>
         <div class="CTATGroupingComponent silex-id-1691946568100-50 group-element page-page-1 paged-element CTATComponent" data-ctat-componentlist="combo3,submit2" id="group2" data-silex-id="silex-id-1691946568100-50" data-ctat-component="CTATGroupingComponent" data-ctat-enabled="true"></div>
@@ -2007,6 +2002,10 @@ a.wt-link:link{
 
 
     <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
+
+
+
+
 
 
 
